tests/invalid/data_loader_missing_provides.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "DataLoaderMissingVariables",
    "description": "Test case: data loader missing required 'variables' field",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadLoader": {
      "kind": "grid",
      "source": { "url_template": "file:///data/{date:%Y%m%d}.nc" }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}
